GPS coordinate added, getting JSON parametrs from DarkSky is still unavailable

--- a/DarkSkyWeather/DarkSkyWeather/Info.plist
+++ b/DarkSkyWeather/DarkSkyWeather/Info.plist
@@ -4,6 +4,25 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>NSLocationUsageDescription</key>
+	<string>We need your location to track weather of your location</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We need your location to track weather of your location</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+		<key>NSExceptionDomains</key>
+		<dict>
+			<key>darksky.net</key>
+			<dict>
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+				<key>NSIncludesSubdomains</key>
+				<true/>
+			</dict>
+		</dict>
+	</dict>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
